<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.gbulan.shoestore.model.Shoe" />

        <variable
            name="sharedViewModel"
            type="com.gbulan.shoestore.ui.viewmodel.SharedViewModel" />
    </data>

    <!-- ConstraintLayout allows to build more complex structures while
    maintaining a flat structure of views.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ShoeDetailFragment">

        <TextView
            android:id="@+id/tv_brand"
            style="@style/TextAppearance.ShoeStore.Title"
            android:layout_width="@dimen/tv_text_input_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/brand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextAppearance.ShoeStore.Title"
            android:layout_width="@dimen/tv_text_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/tv_brand"
            app:layout_constraintTop_toBottomOf="@+id/tv_brand" />

        <TextView
            android:id="@+id/tv_size"
            style="@style/TextAppearance.ShoeStore.Title"
            android:layout_width="@dimen/tv_text_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_color"
            style="@style/TextAppearance.ShoeStore.Title"
            android:layout_width="@dimen/tv_text_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/color"
            app:layout_constraintStart_toStartOf="@+id/tv_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_size" />

        <EditText
            android:id="@+id/edit_text_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:hint="@string/brand_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.brand}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_brand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_brand" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:hint="@string/name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_name" />

        <EditText
            android:id="@+id/edit_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:hint="@string/size_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:emptyIfZero="@={`` + shoe.size}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_size" />

        <EditText
            android:id="@+id/edit_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:hint="@string/color_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.color}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/btn_save_margin_top"
            android:layout_marginEnd="@dimen/margin_large"
            android:onClick="@{() -> sharedViewModel.save(shoe)}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.ShoeStore.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:onClick="@{() -> sharedViewModel.navigate()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save"
            app:layout_constraintEnd_toStartOf="@+id/btn_save" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>