<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSurface"
        tools:context=".ui.fragment.LoginFragment">
        <!-- LinearLayout is a good option since we only need to align elements on the screen-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_app_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/logo_content_description"
                app:srcCompat="@drawable/ic_footprints"
                app:tint="@color/textColorPrimary" />

            <TextView
                android:id="@+id/tv_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:text="@string/app_title"
                android:textAppearance="@style/TextAppearance.ShoeStore.Headline" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_input"
                style="@style/Widget.ShoeStore.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.ShoeStore.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signUp"
                style="@style/Widget.ShoeStore.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/sign_up_btn_text"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</layout>